# VaR_CVaR

./: README.md  pyproject.toml
CalcVaR/: Var_over_OpenBB.ipynb  data.pkl
slides/: Var_over_OpenBB.slides.html
