[tool.poetry]
name = "pyquanttest"
version = "0.1.0"
description = ""
authors = ["Bjoern <31954936+student1304@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
numpy = "^1.26.4"
pandas = "^2.2.0"
openbb = "^4.1.4"
matplotlib = "^3.8.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"
jupyterlab = "^4.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
